--- a/demos/action-for-heroes/styles/layout.css
+++ b/demos/action-for-heroes/styles/layout.css
@@ -80,6 +80,7 @@ svg.iconify {
 
 #document-links a {
     color: rgb(var(--text-color));
+    height: var(--icons);
 }
 
 /*****************************/
