Style: scale controls with font size changes
nav panel scales
close buttons scale
headings own links scale

--- a/demos/action-for-heroes/styles/nav-panel.css
+++ b/demos/action-for-heroes/styles/nav-panel.css
@@ -10,7 +10,7 @@
     grid-template-areas: 
         "buttons"
         "content";
-    grid-template-rows: 8rem auto;
+    grid-template-rows: min-content auto;
     border-radius: 4px;
     border: none; 
     height: 100vh;
@@ -42,10 +42,11 @@
     padding-top: 1rem;
     display: flex;
     flex-direction: row;
-    width: 100%;
+    flex-wrap: wrap;
+    /*! width: 100%; */
     justify-content: space-between;
-    margin: 0;
-    gap: .25rem;
+    /*! margin: 0; */
+    /*! gap: .25rem; */
 }
 
 #list-of-navs button[role=tab] {
