--- a/demos/action-for-heroes/styles/nav-panel.css
+++ b/demos/action-for-heroes/styles/nav-panel.css
@@ -141,4 +141,8 @@
             "buttons";
         grid-template-rows: auto 8rem;
     }
+    #navs {
+        position: sticky;
+        bottom: 0;
+    }
 }
