minor: uncomment z-index

--- a/demos/src/styles/collapsible-panel.css
+++ b/demos/src/styles/collapsible-panel.css
@@ -1,12 +1,12 @@
 .p4w-panel {
-    /* z-index: 1;   */
+    z-index: 1;  
     -webkit-user-select: none;
     user-select: none;
 }
 
 .p4w-panel > div {
     -webkit-font-smoothing: antialiased;
-    /* z-index: 0; */
+    z-index: 0;
 }
 
 .p4w-panel button[aria-expanded=true] + div { 
