--- a/demos/src/styles/collapsible-panel.css
+++ b/demos/src/styles/collapsible-panel.css
@@ -32,7 +32,7 @@
     padding-bottom: 10px;
     border: 2px var(--p4w-border-color) solid;
     position: fixed;
-    background: black;
+    background: rgb(var(--p4w-page-background-color));
 }
 
 .p4w-panel:not(.p4w-expanded) {
