--- a/demos/src/styles/content.css
+++ b/demos/src/styles/content.css
@@ -20,7 +20,8 @@ body.p4w-dark main table th {
 }
 
 .highlight {
-    color: palegoldenrod;
+    background-color: rgba(var(--p4w-sync-highlight-background-color), 1);
+    color: rgba(var(--p4w-sync-highlight-color), 1);
     padding: 3px;
     border-radius: 4px;
     transition: .2s;
