Add section titles when files are split up, regenerate demo

--- a/demos/src/styles/content.css
+++ b/demos/src/styles/content.css
@@ -10,7 +10,8 @@ a:hover, a:active, a:focus {
     background-color: inherit;
 }
 span.page-normal {
-    margin-top: 1rem;
+    margin-top: inherit;
+    border-top: none;
 }
 main {
     text-align: left;
