--- a/demos/src/styles/content.css
+++ b/demos/src/styles/content.css
@@ -9,7 +9,7 @@ a {
 a:hover, a:active, a:focus {
     background-color: inherit;
 }
-span.page-normal {
+main span.page-normal {
     margin-top: inherit;
     border-top: none;
 }
