Toolbars, navigation panel adjusted for mobile-friendliness
Progress on #7

also fixes #6

--- a/demos/src/styles/collapsible-panel.css
+++ b/demos/src/styles/collapsible-panel.css
@@ -32,7 +32,7 @@
     padding-bottom: 10px;
     border: 2px var(--abinb-border-color) solid;
     position: fixed;
-    background: rgb(var(--abinb-page-background-color));
+    background-color: rgb(var(--abinb-page-background-color));
 }
 
 .abinb-panel:not(.abinb-expanded) {
